--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@
 
 <!-- الشريط السفلي -->
 <div class="bottom-bar">
+  <!-- أضف هذا الزر إلى الشريط السفلي في index.html -->
+<button onclick="window.location.href='admin.html'">⚙️ إدارة الموقع</button>
   <button onclick="showPage('homePage')">🏠 الرئيسية</button>
   <button onclick="showPage('searchPage')">🔍 بحث</button>
   <button onclick="showPage('categoriesPage')">🎞️ تصنيفات</button>
